Reduce compiler warnings